--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -12,16 +12,15 @@ jobs:
       - name: Test
         run: |
           pushd /dev/shm
-          wget -q https://archives.boost.io/release/1.87.0/source/boost_1_87_0.tar.gz
-          mkdir boost
-          tar xf boost_1_87_0.tar.gz -C boost --strip-components 1
-          export BOOST_ROOT=${PWD}/boost
+          wget -q https://github.com/boostorg/boost/releases/download/boost-1.87.0/boost-1.87.0-cmake.tar.gz
+          export BOOST_TAR="${PWD}/boost-1.87.0-cmake.tar.gz"
           popd
           export METALL_TEST_DIR=${GITHUB_JOB}
           export CC=gcc-12
           export CXX=g++-12
+          export METALL_CMAKE_ADDITIONAL_OPTIONS="-DBOOST_FETCH_URL=${BOOST_TAR}"
           cd $GITHUB_WORKSPACE
-          bash ./scripts/CI/build_and_test.sh
+          bash ./scripts/CI/run_ci_build_and_test.sh
 
   bst1-80-0:
     runs-on: ubuntu-latest
@@ -35,10 +34,10 @@ jobs:
           wget -q https://archives.boost.io/release/1.80.0/source/boost_1_80_0.tar.gz
           mkdir boost
           tar xf boost_1_80_0.tar.gz -C boost --strip-components 1
-          export BOOST_ROOT=${PWD}/boost
+          export METALL_CMAKE_ADDITIONAL_OPTIONS="-DBOOST_INCLUDE_ROOT=${PWD}/boost"
           popd
           export METALL_TEST_DIR=${GITHUB_JOB}
           export CC=gcc-12
           export CXX=g++-12
           cd $GITHUB_WORKSPACE
-          bash ./scripts/CI/build_and_test.sh
+          bash ./scripts/CI/run_ci_build_and_test.sh
