--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,8 @@ install_boost:
     - module load gcc/${GCC_VERSION}
     - spack load --first boost@${BOOST_VERSION} arch=$(spack arch)
     - export METALL_TEST_DIR="/dev/shm/metall_test-${CI_CONCURRENT_ID}-${CI_PIPELINE_IID}"
-    - srun -N1 --reserv=ci -A seq bash ./scripts/CI/build_and_test.sh
+    - export METALL_CMAKE_ADDITIONAL_OPTIONS="-DBOOST_INCLUDE_ROOT=${BOOST_ROOT}/include"
+    - srun -N1 --reserv=ci -A seq bash ./scripts/CI/run_ci_build_and_test.sh
 
 build_gcc12.1.1_bst1.86.0:
   extends: .build
