Don't use SYSTEM with CMake < v3.25

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,11 +218,19 @@ set(BOOST_INCLUDE_LIBRARIES json unordered interprocess container property_tree 
 if (boost_POPULATED)
     message(STATUS "Boost was already populated")
     # This is likely not required. We do this just in case.
-    FetchContent_Declare(Boost URL "${DEFAULT_BOOST_FETCH_URL}" SYSTEM)
+    if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.25")
+        FetchContent_Declare(Boost URL "${DEFAULT_BOOST_FETCH_URL}" SYSTEM)
+    else ()
+        FetchContent_Declare(Boost URL "${DEFAULT_BOOST_FETCH_URL}")
+    endif ()
     FetchContent_MakeAvailable(Boost)
 elseif (BOOST_FETCH_URL)
     message(STATUS "Will fetch Boost from ${BOOST_FETCH_URL}")
-    FetchContent_Declare(Boost URL "${BOOST_FETCH_URL}" SYSTEM)
+    if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.25")
+        FetchContent_Declare(Boost URL "${BOOST_FETCH_URL}" SYSTEM)
+    else ()
+        FetchContent_Declare(Boost URL "${BOOST_FETCH_URL}")
+    endif ()
     FetchContent_MakeAvailable(Boost)
 elseif (BOOST_INCLUDE_ROOT)
     message(STATUS "Will use Boost headers in ${BOOST_INCLUDE_ROOT}")
@@ -233,7 +241,11 @@ else ()
     # If not found in the system, get default Boost version
     if (NOT Boost_FOUND)
         message(STATUS "Will fetch Boost from ${DEFAULT_BOOST_FETCH_URL}")
-        FetchContent_Declare(Boost URL "${DEFAULT_BOOST_FETCH_URL}" SYSTEM)
+        if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.25")
+            FetchContent_Declare(Boost URL "${DEFAULT_BOOST_FETCH_URL}" SYSTEM)
+        else ()
+            FetchContent_Declare(Boost URL "${DEFAULT_BOOST_FETCH_URL}")
+        endif ()
         FetchContent_MakeAvailable(Boost)
     endif ()
 endif ()
